<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvToolBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHealthDeclaration"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_80"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_marginRight="@dimen/margin_60"
        android:text="@string/health_declaration"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTemperatureRecord"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_marginRight="@dimen/margin_60"
        android:text="@string/temperature_record"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnableTracing"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_marginRight="@dimen/margin_60"
        android:text="@string/enable_tracing"
        android:textAllCaps="false" />

</LinearLayout>