<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvToolBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginRight="@dimen/margin_55"
                android:text="@string/date_time"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold">

            </TextView>

            <Button
                android:id="@+id/btnPickDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_55"
                android:backgroundTint="@color/colorWhite"
                android:padding="@dimen/padding_12"
                android:text="@string/pick_date_time"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_50"
                android:text="@string/temperature_reading"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/eTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginRight="@dimen/margin_55"
                android:backgroundTint="@color/colorBlack"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_20"  />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_80"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginRight="@dimen/margin_80"
                android:text="@string/submit"
                android:textAllCaps="true" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>